Move blog posts to homepage, add blog post pagination

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,12 @@ email: your-email@domain.com
 description:  Description of this site
 
 plugins:
-  - jekyll-feed
+  - jekyll-feed           # RSS feed for blog
+  - jekyll-paginate       # Paginate the list of blog posts
 # - jekyll-seo-tag
 
+# Blogging setup
+paginate: 5               # Number of posts to display at any one time
 
 # Menu data for sitewide navigation
 navigation_links:
